@@ -1,11 +1,12 @@
 #include "aomodule.h"
+#include <assert.h>
 
-static ao_option_t *
+static ao_option *
 dict_to_options(PyObject *dict)
 {
   int pos = 0;
   PyObject *key, *val;
-  ao_option_t *head = NULL;
+  ao_option *head = NULL;
   int ret;
   
 
@@ -33,37 +34,91 @@ dict_to_options(PyObject *dict)
   return NULL;
 }
 
-static char *new_kwlist[] = {"driver_id", "bits", "rate", 
-			     "channels", "options"};
+/* 
+   Helper function to parse everything out of the argument list.
 
+   Returns 0 on failure.
+*/
+static int
+parse_args(PyObject *args, PyObject *kwargs, 
+	   ao_sample_format * format, PyObject **py_options,
+	   const char **filename, 
+	   uint_32 *driver_id,
+	   uint_32 *overwrite)
+{
+  static char *driver_id_kwlist[] = {"driver_id", "bits", "rate", 
+				     "channels", "byte_format",
+				     "options", "filename", 
+				     "overwrite", NULL};
+  static char *driver_name_kwlist[] = {"driver_name", "bits", "rate", 
+				       "channels", "byte_format",
+				       "options", "filename", 
+				       "overwrite", NULL};
+
+  const char *driver_name = NULL;
+
+  assert(py_options != NULL);
+  assert(format != NULL);
+  assert(filename != NULL);
+  assert(driver_id != NULL);
+  assert(overwrite != NULL);
+
+  /* Set the default values */
+  format->bits = 16;
+  format->rate = 44100;
+  format->channels = 2;
+  format->byte_format = 1; /* What should this be by default? Anyone? */
+  
+  overwrite = 0;
+
+  if(PyArg_ParseTupleAndKeywords(args, kwargs, "s|llllO!sl", 
+				 driver_name_kwlist,
+				 &driver_name, 
+				 &format->bits, 
+				 &format->rate, 
+				 &format->channels, 
+				 &format->byte_format,
+				 &PyDict_Type, py_options,
+				 filename, 
+				 overwrite)) {
+    *driver_id = ao_driver_id(driver_name);
+  } else {
+    PyErr_Clear();
+    if(!(PyArg_ParseTupleAndKeywords(args, kwargs, "i|llllO!sl",
+				     driver_id_kwlist,
+				     driver_id, 
+				     &format->bits, 
+				     &format->rate, 
+				     &format->channels, 
+				     &format->byte_format,
+				     &PyDict_Type, py_options,
+				     filename, 
+				     overwrite)))
+      return 0;
+  }  
+
+  return 1;
+}
+
+/*
+  Actually create a new AudioDevice object
+*/
 static PyObject*
 py_ao_new(PyObject *self, PyObject *args, PyObject *kwargs)
 {
-  uint_32 driver_id, bits, rate, channels;
-  char * driver_name;
+  uint_32 overwrite, driver_id;
+  const char * filename = NULL;
   PyObject *py_options = NULL;
-  ao_option_t *c_options;
-  ao_device_t *dev;
+  ao_option *c_options = NULL;
+  ao_device *dev;
+  ao_sample_format sample_format;
   ao_Object *retobj;
 
-  bits = 16;
-  rate = 44100;
-  channels = 2;
-  c_options = NULL;
+  if (!parse_args(args, kwargs, 
+		  &sample_format, &py_options,
+		  &filename, &driver_id, &overwrite))
+    return NULL;
 
-  if(PyArg_ParseTupleAndKeywords(args, kwargs, "s|lllO!", new_kwlist,
-				 &driver_name, &bits, &rate, &channels, 
-				 &PyDict_Type, &py_options)) {
-    driver_id = ao_get_driver_id(driver_name);
-  } else {
-
-    PyErr_Clear();
-    if(!(PyArg_ParseTupleAndKeywords(args, kwargs, "i|lllO!", new_kwlist,
-				     &driver_id, &bits, &rate, &channels, 
-				     &PyDict_Type, &py_options)))
-      return NULL;
-
-  }  
   if (py_options && PyDict_Size(py_options) > 0) {
     /* dict_to_options returns NULL on error, so you can't pass
        an empty dictionary. We can skip this then anyway. */
@@ -78,7 +133,11 @@ py_ao_new(PyObject *self, PyObject *args, PyObject *kwargs)
     Py_DECREF(py_options);
   }
 
-  dev = ao_open(driver_id, bits, rate, channels, c_options);
+  if (filename == NULL)
+    dev = ao_open_live(driver_id, &sample_format, c_options);
+  else
+    dev = ao_open_file(driver_id, filename, overwrite, 
+		       &sample_format, c_options);
   ao_free_options(c_options);
 
   if (dev == NULL) {
@@ -99,7 +158,7 @@ py_ao_dealloc(ao_Object *self)
 }
 
 static PyObject *
-py_ao_get_driver_id(PyObject *self, PyObject *args)
+py_ao_driver_id(PyObject *self, PyObject *args)
 {
   int driver_id;
   char *str = NULL;
@@ -107,7 +166,7 @@ py_ao_get_driver_id(PyObject *self, PyObject *args)
   if (!PyArg_ParseTuple(args, "|s", &str))
     return NULL;
 
-  driver_id = ao_get_driver_id(str); /* akes NULL for default */
+  driver_id = ao_driver_id(str); /* takes NULL for default */
 
   if (driver_id == -1) {
     PyErr_SetString(Py_aoError, "No such driver");
@@ -118,25 +177,25 @@ py_ao_get_driver_id(PyObject *self, PyObject *args)
 }
 
 static PyObject *
-py_ao_get_driver_info(PyObject *self, PyObject *args)
+py_ao_driver_info(PyObject *self, PyObject *args)
 {
   int driver_id = 0;
   char *driver_name;
-  ao_info_t *info; 
+  ao_info *info; 
   PyObject *retdict;
 
   if (self != NULL) {
 
     /* It's a method */
     ao_Object *ao_self = (ao_Object *) self;
-    info = ao_self->dev->funcs->get_driver_info();
+    info = ao_driver_info(ao_self->dev->driver_id);
 
   } else {
 
     /* Maybe it's a string */
     if ((PyArg_ParseTuple(args, "s", &driver_name))) {
 
-      driver_id = ao_get_driver_id(driver_name);
+      driver_id = ao_driver_id(driver_name);
       if (driver_id == -1) {
 	PyErr_SetString(Py_aoError, "Invalid driver name");
       }
@@ -149,7 +208,7 @@ py_ao_get_driver_info(PyObject *self, PyObject *args)
 	return NULL;
     }
     
-    info = ao_get_driver_info(driver_id);
+    info = ao_driver_info(driver_id);
 
   }
   if (!info) {
